--- a/custom.org
+++ b/custom.org
@@ -661,6 +661,13 @@ function.
       :load-path "site-lisp/clock-face.el")
   #+end_src
 
+* TODO combobulate
+
+  Along with [[*Tree-sitter][tree-sitter]] this looks interesting.
+
+  - https://www.masteringemacs.org/article/combobulate-structured-movement-editing-treesitter
+  - https://github.com/mickeynp/combobulate#how-do-i-install-combobulate
+
 * compilation-mode
 
   #+begin_src emacs-lisp
