--- a/custom.org
+++ b/custom.org
@@ -368,22 +368,6 @@ function.
        (newline arg)
        (forward-line (- 0 arg))
        (indent-for-tab-command))
-
-     ;; Inspired by http://whattheemacsd.com/key-bindings.el-01.html
-     (use-package display-line-numbers :ensure t)
-
-     (defun k20e/goto-line ()
-       "Show line numbers and prompt for a line number to go to.
-     Restore previous state of displaying line numbers."
-       (interactive)
-       (if display-line-numbers-mode
-         (call-interactively 'goto-line)
-         (unwind-protect
-             (progn
-               (setq display-line-numbers t)
-               (call-interactively 'goto-line))
-           (setq display-line-numbers nil))))
-
    #+end_src
 
    This one is stolen from [[https://github.com/magnars/.emacs.d/blob/e56e71ce0f0791c7237192a049f29c2de686409a/defuns/lisp-defuns.el][magnars]]:
@@ -406,7 +390,6 @@ function.
      (global-set-key (kbd "M-l") 'k20e/mark-current-line)
      (global-set-key (kbd "<M-return>") 'k20e/open-line-below)
      (global-set-key (kbd "<M-S-return>") 'k20e/open-line-above)
-     (global-set-key [remap goto-line] 'k20e/goto-line)
    #+end_src
 
 ** Buffers
@@ -2099,6 +2082,7 @@ function.
               ("C-x b". consult-buffer)
               ("C-x C-a" . consult-ripgrep)
               ("C-x C-g" . consult-git-grep)
+              ("M-g M-g" . consult-goto-line)
               :map org-mode-map
               ("C-c C-j" . consult-org-heading)))
    #+end_src
