--- a/custom.org
+++ b/custom.org
@@ -2083,7 +2083,7 @@ function.
        (defun consult-line-symbol-at-point ()
          (interactive)
          (consult-line (thing-at-point 'symbol)))
-       :bind (("C-s" . consult-line-symbol-at-point)
+       :bind (("C-s" . consult-line)
               ("C-x b". consult-buffer)
               ("C-x C-a" . consult-ripgrep)
               ("C-x C-g" . consult-git-grep)
