Update find file in project

--- a/custom.org
+++ b/custom.org
@@ -737,23 +737,24 @@ function.
       :bind (("C-x o" . find-file-in-project))
       :config
       (setq-default ffip-limit 8192
-            ffip-find-options "-not -regex \".*/build.*\"" ; TODO ignore .tox
-            ffip-full-paths t
-            ffip-patterns (list "*.el"
-                    "*.html"
-                    "*.js"
-                    "*.json"
-                    "*.go"
-                    "*.md"
-                    "*.org"
-                    "*.py"
-                    "*.sh"
-                    "*.txt"
-                    "*.yaml"
-                    "*.yml"
-                    "Dockerfile"
-                    "Makefile")
-            ffip-prune-patterns (list ".git" "build")))
+                    ffip-find-options "-type f -not -path '*/node_modules/*' -and -not -path '*/.git/*' -and -not -path '*/dist/*' -and -not -path '*/dist-types/*' -and -not -path '*/.yarn/*'"
+                    ffip-full-paths t
+                    ffip-patterns (list "*.el"
+                                        "*.html"
+                                        "*.js"
+                                        "*.json"
+                                        "*.go"
+                                        "*.md"
+                                        "*.org"
+                                        "*.py"
+                                        "*.sh"
+                                        "*.ts"
+                                        "*.txt"
+                                        "*.yaml"
+                                        "*.yml"
+                                        "Dockerfile"
+                                        "Makefile")
+                    ffip-prune-patterns (list ".git" "build" "node_modules")))
   #+end_src
 
 * flycheck
