--- a/custom.org
+++ b/custom.org
@@ -1325,7 +1325,9 @@ function.
       ((org-mode . auto-fill-mode)
        (org-mode . prettify-symbols-mode)
        (org-mode . variable-pitch-mode)
-       (org-mode . (lambda () (visual-line-mode 0))  ; TODO how to do this w/ :hook?
+       (org-mode . (lambda ()
+                     (setq tab-width 8)     ; Must be 8 in org-mode files for some reason
+                     (visual-line-mode 0))  ; TODO how to do this w/ :hook?
                  ))
       :config
       (setq org-default-notes-file (expand-file-name "notes.org" org-directory)
