--- a/custom.org
+++ b/custom.org
@@ -1304,8 +1304,8 @@ function.
       (variable-pitch ((t (:family "ETBembo" :height 1.3))))
       (fixed-pitch ((t (:family "PragmataPro Mono Liga" :height 0.8))))
       (org-block ((t (:inherit fixed-pitch))))
-      (org-block-begin-line ((t (:inherit fixed-pitch))))
-      (org-block-end-line ((t (:inherit fixed-pitch))))
+      (org-block-begin-line ((t (:inherit org-meta-line fixed-pitch))))
+      (org-block-end-line ((t (:inherit org-meta-line fixed-pitch))))
       (org-code ((t (:inherit (shadow fixed-pitch)))))
       (org-date ((t (:inherit (shadow fixed-pitch)))))
       (org-document-info-keyword ((t (:inherit (shadow fixed-pitch)))))
