--- a/custom.org
+++ b/custom.org
@@ -1300,28 +1300,31 @@ function.
 * org-mode
 
   #+begin_src emacs-lisp
+    (defun k20e/org-font-setup ()
+      (custom-theme-set-faces
+       'user
+       '(variable-pitch ((t (:family "ETBembo" :height 1.3))))
+       '(fixed-pitch ((t (:family "PragmataPro Mono Liga" :height 0.8))))
+       '(org-block ((t (:inherit fixed-pitch))))
+       '(org-block-begin-line ((t (:inherit (org-meta-line fixed-pitch)))))
+       '(org-block-end-line ((t (:inherit (org-meta-line fixed-pitch)))))
+       '(org-code ((t (:inherit (shadow fixed-pitch)))))
+       '(org-date ((t (:inherit (shadow fixed-pitch)))))
+       '(org-document-info-keyword ((t (:inherit (shadow fixed-pitch)))))
+       '(org-done ((t (:inherit (shadow fixed-pitch)))))
+       '(org-drawer ((t (:inherit (shadow fixed-pitch)))))
+       '(org-ellipsis ((t (:inherit (shadow fixed-pitch)))))
+       '(org-indent ((t (:inherit (org-hide fixed-pitch)))))
+       '(org-meta-line ((t (:inherit (font-lock-comment-face fixed-pitch)))))
+       '(org-property-value ((t (:inherit fixed-pitch))))
+       '(org-quote ((t (:inherit (shadow)))))
+       '(org-special-keyword ((t (:inherit (font-lock-comment-face fixed-pitch)))))
+       '(org-table ((t (:inherit fixed-pitch))))
+       '(org-tag ((t (:inherit (shadow fixed-pitch)))))
+       '(org-todo ((t (:inherit (shadow fixed-pitch)))))
+       '(org-verbatim ((t (:inherit (shadow fixed-pitch)))))))
+
     (use-package org
-      :custom-face
-      (variable-pitch ((t (:family "ETBembo" :height 1.3))))
-      (fixed-pitch ((t (:family "PragmataPro Mono Liga" :height 0.8))))
-      (org-block ((t (:inherit fixed-pitch))))
-      (org-block-begin-line ((t (:inherit org-meta-line fixed-pitch))))
-      (org-block-end-line ((t (:inherit org-meta-line fixed-pitch))))
-      (org-code ((t (:inherit (shadow fixed-pitch)))))
-      (org-date ((t (:inherit (shadow fixed-pitch)))))
-      (org-document-info-keyword ((t (:inherit (shadow fixed-pitch)))))
-      (org-done ((t (:inherit (shadow fixed-pitch)))))
-      (org-drawer ((t (:inherit (shadow fixed-pitch)))))
-      (org-ellipsis ((t (:inherit (shadow fixed-pitch))))) ; "CANCELED" for some reason is this
-      (org-indent ((t (:inherit (org-hide fixed-pitch)))))
-      (org-meta-line ((t (:inherit (font-lock-comment-face fixed-pitch)))))
-      (org-property-value ((t (:inherit fixed-pitch))))
-      (org-quote ((t (:inherit (shadow)))))
-      (org-special-keyword ((t (:inherit (font-lock-comment-face fixed-pitch)))))
-      (org-table ((t (:inherit fixed-pitch))))
-      (org-tag ((t (:inherit (shadow fixed-pitch)))))
-      (org-todo ((t (:inherit (shadow fixed-pitch)))))
-      (org-verbatim ((t (:inherit (shadow fixed-pitch)))))
       :hook
       ((org-mode . auto-fill-mode)
        (org-mode . prettify-symbols-mode)
@@ -1331,6 +1334,8 @@ function.
                      (visual-line-mode 0))  ; TODO how to do this w/ :hook?
                  ))
       :config
+      (k20e/org-font-setup)
+
       (setq org-default-notes-file (expand-file-name "notes.org" org-directory)
             org-directory (expand-file-name "org" k20e/google-drive-directory)
             org-ellipsis "…"
@@ -1938,7 +1943,8 @@ function.
                "Load light or dark theme depending on which mode the system is currently in."
                (pcase mode
                  ('light (load-theme 'base16-gruvbox-light-soft t))
-                 ('dark (load-theme 'base16-gruvbox-dark-soft t))))
+                 ('dark (load-theme 'base16-gruvbox-dark-soft t)))
+               (if (fboundp 'k20e/org-font-setup) (k20e/org-font-setup)))
              (add-hook 'ns-system-appearance-change-functions 'k20e/load-theme))
             ((string-equal system-type "gnu/linux")
              (load-theme 'base16-gruvbox-dark-soft t))))
